<resources>
    <string name="app_name">Practica_RadioButton</string>
    <string name="txt_valor1">Ingresa primer valor</string>
    <string name="txt_valor2">Ingresa segundo valor</string>
    <string name="button">Calcular</string>
    <string name="rb1">Sumar</string>
    <string name="rb2">Restar</string>
    <string name="rb3">Multiplicar</string>
    <string name="rb4">Dividir</string>
    <string name="TextView_resultado">Resultado</string>
</resources>